test_regress/t/t_assignment_pin_bad.out
%Error: t/t_assignment_pin_bad.v:22:19: Illegal input port connection 'b', mismatch between port which is not an array, and expression which is an array. (IEEE 1800-2023 7.6)
                                      : ... note: In instance 'test'
   22 |   test2 i_test2 (.b);
      |                   ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
